Generate HTML identical to deployed version

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,53 @@
 __pycache__/generate_parampara_poster.cpython-313.pyc
+html_parampara_chart/images/0100-First-Sri-Brahmatantra-Swatantra-Jeer-Swami-CLEAN.png
+html_parampara_chart/images/0200-Brahmatantra-Swatantra-Jeer-Swami-CLEAN.png
+html_parampara_chart/images/0300-Brahmatantra-Swatantra-Jeer-Swami-CLEAN.png
+html_parampara_chart/images/0400-Brahmatantra-Swatantra-Jeer-Swami-CLEAN.png
+html_parampara_chart/images/0500-Brahmatantra-Swatantra-Jeer-Swami-CLEAN.png
+html_parampara_chart/images/0600-Brahmatantra-Swatantra-Jeer-Swami-CLEAN.png
+html_parampara_chart/images/0700-Brahmatantra-Swatantra-Jeer-Swami-CLEAN.png
+html_parampara_chart/images/0800-Brahmatantra-Swatantra-Jeer-Swami-CLEAN.png
+html_parampara_chart/images/0900-Brahmatantra-Swatantra-Jeer-Swami-CLEAN.png
+html_parampara_chart/images/1000-Brahmatantra-Swatantra-Jeer-Swami-CLEAN.png
+html_parampara_chart/images/1100-Brahmatantra-Swatantra-Jeer-Swami-CLEAN.png
+html_parampara_chart/images/1200-Brahmatantra-Swatantra-Jeer-Swami-CLEAN.png
+html_parampara_chart/images/1300-Brahmatantra-Swatantra-Jeer-Swami-CLEAN.png
+html_parampara_chart/images/1400-Brahmatantra-Swatantra-Jeer-Swami-CLEAN.png
+html_parampara_chart/images/1500-Brahmatantra-Swatantra-Jeer-Swami-CLEAN.png
+html_parampara_chart/images/1600-Brahmatantra-Swatantra-Jeer-Swami-CLEAN.png
+html_parampara_chart/images/1700-Brahmatantra-Swatantra-Jeer-Swami-CLEAN.png
+html_parampara_chart/images/1800-Brahmatantra-Swatantra-Jeer-Swami-CLEAN.png
+html_parampara_chart/images/1900-Brahmatantra-Swatantra-Jeer-Swami-CLEAN.png
+html_parampara_chart/images/2000-Brahmatantra-Swatantra-Jeer-Swami-CLEAN.png
+html_parampara_chart/images/2100-Brahmatantra-Swatantra-Jeer-Swami-CLEAN.png
+html_parampara_chart/images/2200-Brahmatantra-Swatantra-Jeer-Swami-CLEAN.png
+html_parampara_chart/images/2300-Brahmatantra-Swatantra-Jeer-Swami-CLEAN.png
+html_parampara_chart/images/2400-Brahmatantra-Swatantra-Jeer-Swami-CLEAN.png
+html_parampara_chart/images/2500-Brahmatantra-Swatantra-Jeer-Swami-CLEAN.png
+html_parampara_chart/images/2600-Brahmatantra-Swatantra-Jeer-Swami-CLEAN.png
+html_parampara_chart/images/2700-Brahmatantra-Swatantra-Jeer-Swami-CLEAN.png
+html_parampara_chart/images/2800-Brahmatantra-Swatantra-Jeer-Swami-CLEAN.png
+html_parampara_chart/images/2900-Brahmatantra-Swatantra-Jeer-Swami-CLEAN.png
+html_parampara_chart/images/3000-Brahmatantra-Swatantra-Jeer-Swami-CLEAN.png
+html_parampara_chart/images/3100-Brahmatantra-Swatantra-Jeer-Swami-CLEAN.png
+html_parampara_chart/images/3200-Brahmatantra-Swatantra-Jeer-Swami-CLEAN.png
+html_parampara_chart/images/3300-Brahmatantra-Swatantra-Jeer-Swami-CLEAN.png
+html_parampara_chart/images/3400-Brahmatantra-Swatantra-Jeer-Swami-CLEAN.png
+html_parampara_chart/images/3500-Brahmatantra-Swatantra-Jeer-Swami-CLEAN.png
+html_parampara_chart/images/3600-Brahmatantra-Swatantra-Jeer-Swami-CLEAN.png
+html_parampara_chart/images/F00-Sri Lakshmi Hayagriva.png
+html_parampara_chart/images/F02-Swamy-nammalwar.png
+html_parampara_chart/images/F03-Sriman-nathamuni.png
+html_parampara_chart/images/F04-Sri-Uyyakonda-Swami.png
+html_parampara_chart/images/F06-Sri-Alavandar.png
+html_parampara_chart/images/F07-Sri-Periya-nambi01.png
+html_parampara_chart/images/F09-Sri-Tirukkurugai-piran-pillan.png
+html_parampara_chart/images/F10-Sri-Kidambi-acchan.png
+html_parampara_chart/images/F11-Engal-Alwan-1.png
+html_parampara_chart/images/F13-Nadadur-ammal-2.png
+html_parampara_chart/images/F14-Sri-Kidambi-Rangaraja-charya-1.png
+html_parampara_chart/images/F15-Kidambi-appuliar-1.png
+html_parampara_chart/images/F16-Sri-nigamanta-mahaa-desikan.png
+html_parampara_chart/images/F17-Sri-kumara-varadacharya02.png
+Sri_Parakala_Matham_Guru_Parampara_GRID_A2.pdf
+Sri_Parakala_Matham_Guru_Parampara_GRID_A2.png
