--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ Sri_Parakala_Matham_Guru_Parampara_GRID_*.pdf
 Sri_Parakala_Matham_Guru_Parampara_GRID_*.png
 output/
 STORE/
+Sri_Parakala_Matham_Guru_Parampara_GRID_A2.pdf
+Sri_Parakala_Matham_Guru_Parampara_GRID_A1.pdf
